# sr_dexterous_hand_documentation

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Contributing.md  README.md  buildspec.yml  package.xml
docs/: Makefile  conf.py  conf_old.py  index.md  index.rst  requirements.txt  shadow-manual.cls
docs/_static/: shadow-manual.cls
docs/templates/: class.rst
docs/test_package/: test_module.py
docs/user_guide/: 1_1_handkit.rst  1_1_introduction.rst  1_1_pelicase.rst  1_1_setting_up_a_real_hand.rst  1_2_10_icons_for_hand.md  1_2_1_setting_up_a_real_hand_uni.rst  1_2_2_running_the_system_uni.rst  1_2_3_installing_the_software_uni.rst  1_2_5_ros_master_and_connecting_additional_computers.rst  1_2_5_setting_up_a_real_hand_bi.rst  1_2_running_the_system_uni.rst  1_2_setting_up_a_real_hand.rst  1_2_setting_up_a_real_hand_uni.rst  1_3_setting_up_a_simulated_hand.rst  1_4_saving_logs.rst  1_4_simulated_hand_gazebo.rst  1_4_simulated_hand_mujoco.rst  1_introduction.md  1_laptop_box.rst  1_setting_up_the_hand.md  2_0_nuc_server.rst  2_2_ros_master_and_connecting_additional_computers.md  2_2_ros_master_and_connecting_additional_computers.rst  2_connecting_the_cables.rst  2_hand_lights.rst  2_icons_for_hand.md  2_icons_for_hand.rst  2_saving_logs.rst  2_setting_up_the_grasper.md  2_setting_up_the_hand.md  2_software_description.md  3_FAQ.md  (+106 more)
launch/: sr_dexterous_hand_documentation_server.launch
scripts/: sr_dexterous_hand_documentation_server.py
sr_interface/: sr_robot_commander.py
test_package/: test_module.py
(+5 files in other folders)
