cmake_minimum_required(VERSION 3.0.2)
project(sr_dexterous_hand_documentation)

find_package(catkin REQUIRED)

catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES sr_dexterous_hand_documentation
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)

include_directories(
# include
# ${catkin_INCLUDE_DIRS}
)
