<?xml version="1.0"?>
<package>
  <name>sr_dexterous_hand_documentation</name>
  <version>0.0.1</version>
  <description>This repository contains the documentation of Shadow's Dexterous Hand product
  </description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
