<?xml version="1.0"?>
<package format="2">
  <name>sr_dexterous_hand_documentation</name>
  <version>0.0.2</version>
  <description>The sr_dexterous_hand_documentation package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot</maintainer>

  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
